--- a/sdktest3/index.html
+++ b/sdktest3/index.html
@@ -84,7 +84,7 @@
     // ---------------- Config ----------------
     const HORIZON = "https://horizon.stellar.org";
     const NETWORK = SDK.Networks.PUBLIC;
-    const SORO_RPC = "https://soroban.stellar.org"; // mainnet Soroban RPC
+    const SORO_RPC = "https://mainnet.sorobanrpc.com"; // mainnet Soroban RPC
     const routerContractId = "CBQDHNBFBZYE4MKPWBSJOPIYLW4SFSXAXUTSXJN76GNKYVYPCKWC6QUK";
 
     // ---------------- Helpers ----------------
