--- a/sdktest3/index.html
+++ b/sdktest3/index.html
@@ -8,8 +8,8 @@
   <!-- Freighter API (UMD) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/stellar-freighter-api/5.0.0/index.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <!-- Stellar SDK (UMD v14.3.0) — self-hosted to avoid CORS flakiness -->
-  <script src="https://www.mirrasets.com/sdk/stellar-sdk-14.3.0.min.js?v=3" crossorigin="anonymous"></script>
+<!-- Stellar SDK (UMD v14.3.0) — self-hosted, same-origin to avoid CORS -->
+<script src="/sdk/stellar-sdk-14.3.0.min.js?v=4"></script>
 
   <style>
     :root { --bg:#0b0f12; --panel:#12181d; --ink:#e8f0f6; --muted:#94a3ad; --accent:#4fd1c5; --err:#ff6b6b; --ok:#57d29a; --border:#1c242c; }
